- Added a dialog to allow the user to send COD mail without a tracking number.
- Replaced my edit window with a static popup. This looks and behaves better this way.

2010-07-18  Asa Ayers  <Asa.Ayers@Gmail.com>

- Added color coding to the minimum price tooltip. If your minimum price is below the current auction price, it wll be green, otherwise it is red.
- Added the ability to change the price of an item. You can click the Total Invested or the Invested Each to change the value. 
- Fixed a bug where sometimes the number owned was not being updated, so you might have 3 of an item but it was calculating as if you only had 1.
- Added the ability to suspend and resume ItemAuditor (Ticket #8). To access this feature use "/ia suspend".

2010-07-17  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed a bug that occurs if you take a flight point and the first thing you kill only has one item. ItemAuditor was incorrectly attaching the cost fo the flight to the cost of that item.

2010-07-16  Asa Ayers  <Asa.Ayers@Gmail.com>

- Added an interface to be able to view what you have invested in. I still need to build a way to modify this information,
- Bug fix
- Changed 'Count' to '# Owned' and made it right aligned.

2010-07-14  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed Bug #9 - If existing items have 0c invested, increase them all to match the first transaction that changes their price.

2010-07-11  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed a bug with the mail where items get recorded by the mail scanner and the bag scanner.
- Fixed some minor issues not visible to the user.

2010-07-08  Asa Ayers  <Asa.Ayers@Gmail.com>

- Added a (hopefully) more readable changelog.
- I have removed the ability to show debug messages in the chat window and have replaced it with a new debug frame. /ia debug will show all of the debug messages and everything that IA has printed.